--- a/kitty/themes/OneDark-Pro.conf
+++ b/kitty/themes/OneDark-Pro.conf
@@ -47,20 +47,27 @@ color11 #E5C07B
 
 # blue
 color4  #61AFEF
-color12 #4DC4FF
+color12  #61AFEF
+# color12 #4DC4FF
+# color12 #5FB3FF 
 
 # purple
 color5  #C678DD
 color13 #DE73FF
 
 # cyan
-color6   #88C0D0
-color14  #8FBCBB
+# color6   #88C0D0
+# color14  #8FBCBB
 
 # cyan
-# color6  #56B6C2
-# color14 #4CD1E0
+color6  #56B6C2
+color14 #4CD1E0
 
 # white
 color7  #D7DAE0
 color15 #E6E6E6
+
+active_border_color #4F5666
+inactive_border_color #3F4451
+
+
