--- a/linux/sway/config
+++ b/linux/sway/config
@@ -6,7 +6,8 @@
 
 
 ### Output configuration
-output * bg /home/wchan/Pictures/onedark-wallpapers-main/minimal/od_brush.png fill
+# output * bg ~/Pictures/onedark-wallpapers-main/misc/od_road.jpg fill
+output * bg ~/Pictures/Walls_old/Trees-22.jpg fill
 
 
 
@@ -167,11 +168,11 @@ set $menu wofi --show drun -i | xargs swaymsg exec --
     floating_modifier $mod normal
 
     # Reload the configuration file
-    bindsym $mod+Shift+c reload
+    bindsym alt+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
     # bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
-	  bindsym $mod+Shift+e exec ~/.config/sway/swaypoweroff.sh
+	  bindsym alt+Shift+e exec ~/.config/sway/swaypoweroff.sh
 
     # Lock sway
     bindsym Scroll_Lock exec ~/.config/sway/lock.sh
@@ -179,15 +180,21 @@ set $menu wofi --show drun -i | xargs swaymsg exec --
 #
 # Moving around:
 #
-    # Move your focus around (also applies to stacked and tabbed)
-    bindsym $mod+$left focus left
-    # bindsym $mod+$down focus down
-    # bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
 
-    # This might be a bit unintuitive at first
+    # Move your focus around (also applies to stacked and tabbed)
     bindsym $mod+$down nop focus_prev_window
     bindsym $mod+$up nop focus_next_window
+
+    bindsym $mod+$left focus left
+    bindsym $mod+$right focus right
+
+
+    bindsym alt+Shift+j nop swap_with_next_window
+    bindsym alt+Shift+k nop swap_with_prev_window
+
+    # bindsym $mod+$down focus down
+    # bindsym $mod+$up focus up
+
 
     # Move the focused window with the same, but add Shift (Move the the window ("cult of vim" version))
     # Uncomment if swaymonad breaks
@@ -201,8 +208,7 @@ set $menu wofi --show drun -i | xargs swaymsg exec --
     bindsym $mod+Shift+$up nop move up
     bindsym $mod+Shift+$right nop move right
 
-
-    # Porting yabai functionality with swaymonad
+    # TODO: Add balance
     bindsym $mod+shift+y nop reflecty
     bindsym $mod+shift+x nop reflectx
     bindsym $mod+shift+t nop transpose
@@ -239,20 +245,20 @@ set $menu wofi --show drun -i | xargs swaymsg exec --
     # respectively.
     # This is for opening up new windows of the same container
     # i.e. if firefox is focused and you do splith and do ctrl+n it'll open in that orientation
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
 
+    bindsym alt+b splith
+    bindsym alt+v splitv
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
+    # normalize to use alt instead of $mod for similairty w/ Aerospace
+    bindsym alt+s layout stacking
 
-    ## TODO - Why the hell is this mapped to w?? Does that make any sense with the word "tabbed"?
-    bindsym $mod+w layout tabbed
+    bindsym alt+w layout tabbed
 
     # layout toggle split is what we mainly want (SAME WITH THIS WHY IS SPLIT MAPPED TO `e`)
-    bindsym $mod+e layout toggle split
+    bindsym alt+e layout toggle split
 
     # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
+    bindsym alt+f fullscreen
 
     # Toggle the current focus between tiling and floating mode
     bindsym $mod+Shift+space floating toggle
