--- a/kitty/os_configs/macos.conf
+++ b/kitty/os_configs/macos.conf
@@ -2,8 +2,8 @@
 
 editor /opt/homebrew/bin/nvim
 
-background_opacity 0.97
-background_blur 18
+background_opacity 0.95
+background_blur 32
 
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
@@ -12,6 +12,11 @@ macos_colorspace displayp3
 
 # sometimes kitty might not list the font with command kitty list-fonts
 # kitty --debug-font-fallback shows font used
-
 font_family CaskaydiaCove Nerd Font
 font_size 11.0
+
+# Enable font hinting
+font_hinting full
+# Enable subpixel anti-aliasing
+font_antialias true
+font_subpixel_antialias true
