--- a/linux/waybar/config
+++ b/linux/waybar/config
@@ -33,16 +33,16 @@
       "default": ""
     },
     "persistent-workspaces": {
-      "1": ["DP-1"],
-      "2": ["DP-1"],
-      "3": ["DP-1"],
-      "4": ["DP-1"],
-      "5": ["DP-1"],
-      "6": ["HDMI-A-1", "DP-1"],
-      "7": ["HDMI-A-1", "DP-1"],
-      "8": ["HDMI-A-1", "DP-1"],
-      "9": ["HDMI-A-1", "DP-1"],
-      "10": ["HDMI-A-1", "DP-1"]
+      "1": ["DP-1","HDMI-A-1","DP-2"],
+      "2": ["DP-1","HDMI-A-1","DP-2"],
+      "3": ["DP-1","HDMI-A-1","DP-2"],
+      "4": ["DP-1","HDMI-A-1","DP-2"],
+      "5": ["DP-1","HDMI-A-1","DP-2"],
+      "6": ["HDMI-A-1", "DP-1", "eDP-1"],
+      "7": ["HDMI-A-1", "DP-1", "eDP-1"],
+      "8": ["HDMI-A-1", "DP-1", "eDP-1"],
+      "9": ["HDMI-A-1", "DP-1", "eDP-1"],
+      "10": ["HDMI-A-1", "DP-1", "eDP-1"]
     }
   },
   "sway/mode": {
