--- a/macos/aerospace/aerospace.toml
+++ b/macos/aerospace/aerospace.toml
@@ -16,7 +16,7 @@ after-login-command = []
 
 # JankyBorders has a built-in detection of already running process,
 # so it won't be run twice on AeroSpace restart
-after-startup-command = ['exec-and-forget /opt/homebrew/bin/borders active_color=0xff61afef inactive_color=0x00000000 width=2.5 style=round hidpi=on order=above']
+after-startup-command = ['exec-and-forget borders active_color=0xff61afef inactive_color=0x00000000 width=2.0 style=round hidpi=on order=above']
 
 # Start AeroSpace at login
 start-at-login = true
@@ -82,7 +82,7 @@ on-focus-changed = "move-mouse window-lazy-center"
 3 = ['main','^built-in retina display$']
 4 = ['main','^built-in retina display$']
 5 = ['main','^built-in retina display$']
-6 = ['secondary','^built-in retina display$']
+6 = ['main','^built-in retina display$']
 7 = ['secondary','^built-in retina display$']
 8 = ['secondary','^built-in retina display$']
 9 = ['secondary','^built-in retina display$']
@@ -123,7 +123,7 @@ outer.right =      8
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 
 # Reload Config
-cmd-alt-c = 'reload-config'
+alt-shift-c = 'reload-config'
 
 ## Layout Bindings
 
@@ -147,21 +147,19 @@ alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3 - sway
 
 # Moving; See: https://nikitabobko.github.io/AeroSpace/commands#focus
 
-cmd-h = 'focus --boundaries-action wrap-around-the-workspace left'
-cmd-j = 'focus --boundaries-action wrap-around-the-workspace down'
-cmd-k = 'focus --boundaries-action wrap-around-the-workspace up'
-cmd-l = 'focus --boundaries-action wrap-around-the-workspace right'
-
+alt-h = 'focus --boundaries-action wrap-around-the-workspace left'
+alt-j = 'focus --boundaries-action wrap-around-the-workspace down'
+alt-k = 'focus --boundaries-action wrap-around-the-workspace up'
+alt-l = 'focus --boundaries-action wrap-around-the-workspace right'
+alt-shift-h = 'move left'
+alt-shift-j = 'move down'
+alt-shift-k = 'move up'
+alt-shift-l = 'move right'
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-cmd-shift-h = 'move left'
-cmd-shift-j = 'move down'
-cmd-shift-k = 'move up'
-cmd-shift-l = 'move right'
-
-alt-shift-h = ['join-with left', 'mode main']
-alt-shift-j = ['join-with down', 'mode main']
-alt-shift-k = ['join-with up', 'mode main']
-alt-shift-l = ['join-with right', 'mode main']
+cmd-shift-h = ['join-with left', 'mode main']
+cmd-shift-j = ['join-with down', 'mode main']
+cmd-shift-k = ['join-with up', 'mode main']
+cmd-shift-l = ['join-with right', 'mode main']
 
 # TODO: use-trackpad-gestures-to-switch-workspaces
 # See: https://nikitabobko.github.io/AeroSpace/goodness
@@ -197,11 +195,11 @@ alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 
 # resizing in normal
-cmd-ctrl-h = 'resize width -50'
-cmd-ctrl-j = 'resize height +50'
-cmd-ctrl-k = 'resize height -50'
-cmd-ctrl-l = 'resize width +50'
-cmd-ctrl-b = 'balance-sizes'
+alt-ctrl-h = 'resize width -50'
+alt-ctrl-j = 'resize height +50'
+alt-ctrl-k = 'resize height -50'
+alt-ctrl-l = 'resize width +50'
+alt-ctrl-b = 'balance-sizes'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-r = 'mode resize'
