--- a/macos/aerospace/aerospace.toml
+++ b/macos/aerospace/aerospace.toml
@@ -16,7 +16,9 @@ after-login-command = []
 
 # JankyBorders has a built-in detection of already running process,
 # so it won't be run twice on AeroSpace restart
-after-startup-command = ['exec-and-forget borders active_color=0xff61afef inactive_color=0x00000000 width=2.0 style=round hidpi=on order=above']
+after-startup-command = [
+  'exec-and-forget borders active_color=0xff61afef inactive_color=0x00000000 width=2.0 style=round hidpi=on order=above',
+]
 
 # Start AeroSpace at login
 start-at-login = true
@@ -77,24 +79,24 @@ on-focus-changed = "move-mouse window-lazy-center"
 # 5 = '^built-in retina display$'  # Case insensitive regex match
 # 6 = ['secondary', 'dell']        # You can specify multiple patterns. The first matching pattern will be used
 
-1 = ['main','^built-in retina display$']
-2 = ['main','^built-in retina display$']
-3 = ['main','^built-in retina display$']
-4 = ['main','^built-in retina display$']
-5 = ['main','^built-in retina display$']
-6 = ['main','^built-in retina display$']
-7 = ['secondary','^built-in retina display$']
-8 = ['secondary','^built-in retina display$']
-9 = ['secondary','^built-in retina display$']
-10 = ['secondary','^built-in retina display$']
+1 = ['main', '^built-in retina display$']
+2 = ['main', '^built-in retina display$']
+3 = ['main', '^built-in retina display$']
+4 = ['main', '^built-in retina display$']
+5 = ['main', '^built-in retina display$']
+6 = ['main', '^built-in retina display$']
+7 = ['secondary', 'main', '^built-in retina display$']
+8 = ['secondary', 'main', '^built-in retina display$']
+9 = ['secondary', 'main', '^built-in retina display$']
+10 = ['secondary', 'main', '^built-in retina display$']
 
 [gaps]
 inner.horizontal = 8
-inner.vertical =   8
-outer.left =       8
-outer.bottom =     8
-outer.top =        8
-outer.right =      8
+inner.vertical = 8
+outer.left = 8
+outer.bottom = 8
+outer.top = 8
+outer.right = 8
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -139,18 +141,18 @@ alt-shift-c = 'reload-config'
 # alt-v = 'split vertical'
 alt-f = 'fullscreen'
 
-alt-s = 'layout v_accordion' # 'layout stacking' in i3 - sway
-alt-w = 'layout h_accordion' # 'layout tabbed' in i3 - sway
+alt-s = 'layout v_accordion'               # 'layout stacking' in i3 - sway
+alt-w = 'layout h_accordion'               # 'layout tabbed' in i3 - sway
 alt-e = 'layout tiles horizontal vertical' # 'layout toggle split' in i3 - sway
 alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3 - sway
 
 
 # Moving; See: https://nikitabobko.github.io/AeroSpace/commands#focus
 
-alt-h = 'focus --boundaries-action wrap-around-the-workspace left'
-alt-j = 'focus --boundaries-action wrap-around-the-workspace down'
-alt-k = 'focus --boundaries-action wrap-around-the-workspace up'
-alt-l = 'focus --boundaries-action wrap-around-the-workspace right'
+alt-h = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors left'
+alt-j = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors down'
+alt-k = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors up'
+alt-l = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors right'
 alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
@@ -214,3 +216,24 @@ equal = 'resize smart +50'
 
 enter = 'mode main'
 esc = 'mode main'
+
+[[on-window-detected]]
+if.app-id = 'com.hnc.Discord'
+run='move-node-to-workspace 10'
+
+[[on-window-detected]]
+if.app-id = 'com.apple.MobileSMS'
+run='move-node-to-workspace 10'
+
+[[on-window-detected]]
+if.app-id = 'com.spotify.client'
+run='move-node-to-workspace 10'
+
+[[on-window-detected]]
+if.app-id = 'com.arobas-music.guitarpro8'
+if.app-name-regex-substring = 'guitarpro'
+run='move-node-to-workspace 4'
+
+[[on-window-detected]]
+if.app-id = 'com.valvesoftware.steam'
+run=['layout tiling', 'move-node-to-workspace 8']
