Add ranger binding to kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -21,7 +21,7 @@ enabled_layouts splits,fat,grid,horizontal,stack,tall,vertical
 
 map f1 launch --cwd=current
 map f2 launch --cwd=current --location=vsplit lazygit
-
+map f3 launch --cwd=current --location=vsplit ranger
 # Create a new window splitting the space used by the existing one so that
 # the two windows are placed side by side if the existing window is wide or
 # one above the other if the existing window is tall.
